# ground-rover-project

./: .gitignore
adl200_core/: CMakeLists.txt  package.xml
adl200_core/config/: xsens_mit_node.yaml
adl200_core/include/adl200_core/: adl200_driver.hpp
adl200_core/launch/: adl200_core.launch  adl200_driver.launch
adl200_core/src/: adl200_driver.cpp
adl200_motor_driver/: CMakeLists.txt  package.xml
adl200_motor_driver/include/adl200_motor_driver/: can_handler.h  motor_driver.h
adl200_motor_driver/launch/: socketcan_bridge.launch
adl200_motor_driver/src/: can_handler.cpp  motor_ctrl.cpp  motor_driver.cpp
adl200_msgs/: CMakeLists.txt  package.xml
adl200_msgs/msg/: gps_data.msg
adl200_teleop/: CMakeLists.txt  package.xml
adl200_teleop/config/: ps3.config.yaml
adl200_teleop/launch/: teleop.launch
can_handler/: CMakeLists.txt  package.xml
can_handler/src/: can_handler.cpp
description2/: CMakeLists.txt  package.xml
description2/config/: my_controller.yaml  view_robot.rviz
description2/meshes/: Chassis.stl  camera.stl  upper.stl  wheels.stl
description2/urdf/: adl200_description.urdf.xacro  adl200_description2.urdf.xacro  adl200_description_lidar.urdf.xacro  gazebo_control.xacro  gazebo_controller_skid.xacro  gps.xacro  gps2.xacro  imu.xacro  laser.xacro  my_controller.xacro  ptz_camera.urdf.xacro  robot_alfredo_description.urdf.xacro  robot_core.xacro  robot_core_alfredo.xacro  sensor.xacro
description2/world/: soccer_field.sdf
gps_collector/: CMakeLists.txt  package.xml  setup.py
gps_collector/launch/: gps_mqtt_subscriber.launch
gps_collector/scripts/: gps_mqtt_subscriber.py  (+1 more)
gps_navigation/: package.xml
lidar_navigation/: CMakeLists.txt  package.xml
main/: package.xml
motor_driver/: CMakeLists.txt  package.xml
motor_driver/include/motor_driver/: can_handler.h  motor_driver.h
motor_driver/src/: can_handler.cpp  motor_driver.cpp
odomnoise/: CMakeLists.txt  package.xml
ricardo_action/: CMakeLists.txt  package.xml
ricardo_action/csv_files/curved/: 1m_0_noise_curved.csv  1m_10_noise_curved.csv  1m_5_noise_curved.csv  2.5m_0_noise_curved.csv  2.5m_10_noise_curved.csv  2.5m_5_noise_curved.csv  5m_0_noise_curved.csv  5m_10_noise_curved.csv  5m_5_noise_curved.csv
ricardo_action/csv_files/straight/1m/: 0_gaussian_noise.csv  10_gaussian_noise.csv  5_gaussian_noise.csv
ricardo_action/csv_files/straight/2.5m/: 0_gaussian_noise.csv  10_gaussian_noise.csv  5_gaussian_noise.csv
ricardo_action/csv_files/straight/2m/: 0_gaussian_noise.csv  10_gaussian_noise.csv  5__gaussian_noise.csv
ricardo_action/launch/: ricardo_action.launch
ricardo_action/src/: ricardo_action.cpp
ricardo_move/: CMakeLists.txt  package.xml
rover_control/: CMakeLists.txt  package.xml
simple_navigation_goals/: CMakeLists.txt  package.xml
simple_navigation_goals/launch/: simple_navigation_goals.launch
simple_navigation_goals/src/: simple_navigation_goals.cpp
slam/: CMakeLists.txt  package.xml
test_tf/: CMakeLists.txt  package.xml
testing/: CMakeLists.txt  package.xml
transform_velocity/: CMakeLists.txt  package.xml
velocity_sender/: CMakeLists.txt  package.xml
waypoint/: CMakeLists.txt  package.xml
waypoint2/: CMakeLists.txt  package.xml
(+65 files in other folders)
